--- a/算法与数据结构/算法导论/第一部分基础知识.md
+++ b/算法与数据结构/算法导论/第一部分基础知识.md
@@ -111,7 +111,7 @@ public static void insert_sort(int[] array){
     }
 }
 ```
-- 最坏时间复杂度(O**2)
+- 最坏时间复杂度(On**2)
 
 ### 希尔排序
 希尔排序，也称递减增量排序算法，是插入排序的一种更高效的改进版本。但希尔排序是非稳定排序算法。
@@ -158,3 +158,73 @@ def merge_sort(array):
 ```
 
 - 时间复杂度 nlgn
+
+### 分治法
+最大子数组： 求解和最大的子序列， 变形最大子序列和（不要索引）
+
+#### 思想
+1. 将序列一分为二，分别求解子序列的最大子序列， 最大子序列有三种情况：全部在左边，全部在右边，跨越中点。
+2. 分解：将问题分解为三类问题。既上面三种情况
+3. 计算：分别计算三类问题。
+4. 合并，三类问题的最大者
+
+```python
+def find_cross_max_sum(array, left, right, mid):
+    # 分别计算中点左边和右边的最大和，相加即使跨越中点的最大和
+
+    # 查找左边最大集合
+    left_sum = array[mid]
+    left_max_sum = array[mid]
+    left_max_index = mid
+    for left_index in range(mid-1, left-1, -1):
+        left_sum += array[left_index]
+        if left_sum > left_max_sum:
+            left_max_sum = left_sum
+            left_max_index = left_index
+    
+    # 寻找右边的最大集合
+    right_sum = 0
+    right_max_sum = 0
+    right_max_index = mid
+    for right_index in range(mid+1, right+1):
+        right_sum += array[right_index]
+        if right_sum > right_max_sum:
+            right_max_sum = right_sum
+            right_max_index = right_index
+    return (left_max_index, right_max_index, left_max_sum+right_max_sum)
+
+def find_max_sub_array(array, left, right):
+    if left == right:
+        return (left, left, array[left])
+    mid = (left+right)//2
+    Left = find_max_sub_array(array, left, mid)
+    Right = find_max_sub_array(array, mid+1, right)
+    Cross = find_cross_max_sum(array, left, right, mid)
+    return max(Left, Right, Cross, key=lambda x: x[2])
+```
+
+- 复杂度 nlgn
+
+#### 暴力解法
+1. 求解所有组合
+```python
+def findMaxSubArray(array):
+    max = 0
+    for i in range(0, len(array)):
+        sum = 0
+        for j in range(i, len(array)):
+            sum += array[j]
+            if sum > max:
+                max = sum
+                left, right = i, j
+    return left, right, max
+```
+   - 复杂度 n^2
+2. 保留之前结果，只求出最大和 
+```python
+def find(array):
+    for i in rane(1, len(array)):
+        array[i] = array[i] + max(array[i-1], 0)
+    return max(array)
+```
+    - 复杂度 n
