算法/堆排序

--- a/算法与数据结构/算法导论/第二部分排序和顺序统计量.md
+++ b/算法与数据结构/算法导论/第二部分排序和顺序统计量.md
@@ -13,42 +13,109 @@
    3. 构建最大堆 A[0...（n-1)] (平衡)
    
 ```python
-def max_heapify(array, root):
-    # 传入一个数组和一个根节点索引，以此向下进行建堆、平衡堆
-    # 即比较父节点和左右子节点，把最大的与父节点交换，如果交换了继续向下平衡
-    # 但是不能保证子孙节点都小于此父节点，要从底向上的进行平衡建堆
-    # root 为索引从0开始，所以计算子节点要加1
-    left_child, right_child = root*2+1, root*2+2
-    largest = root
-    if left_child < HEAP_SIZE and array[left_child] > array[largest]:
-        largest = left_child
-    if right_child < HEAP_SIZE and array[right_child] > array[largest]:
-        largest = right_child
-    if largest != root:
-        array[root], array[largest] = array[largest], array[root]
-        max_heapify(array, largest)
+class Heap:
+    def __init__(self, array):
+        self.array = array
+        self.size = len(array)
+        self.build()
 
-def build_max_heap(array):
-    # 从底向上的建堆
-    # 因为根节点在第一个，顺序向下的，所以array[n/2+1....n]都是叶子节点，不需要进行平衡
-    # 从最底下的父节点进行建堆即可
-    # 一直到第一个 array[0]
-    for i in range(len(array)//2-1, -1, -1):
-        max_heapify(array, i)
+    @staticmethod
+    def get_child(parent):
+        # parent 是数组索引值 从0开始算，每次计算都要加1
+        return parent * 2 + 1
+    
 
-def heap_sort(array):
-    # 堆排序
-    # 1. 构建最大堆
-    # 2. 每次将第一个数放到堆得最后，并且堆得长度-1 （每次取出最大的放到后面，顺序就出来了）
-    # 3. 取出之后的可能不是最大堆，需要重新平衡一下即可
-    global HEAP_SIZE 
-    HEAP_SIZE = len(array)
-    build_max_heap(array)
-    for i in range(len(array)-1, 0, -1):
-        array[0], array[i] = array[i], array[0]
-        HEAP_SIZE -= 1
-        max_heapify(array, 0)
+    def heapify(self, parent):
+        '''
+        堆化： 传入一个父节点，由此向下的进行比较交换--堆化
+        每次比较父节点和左右子节点，把最大的和父节点进行交换，如果进行了交换则向下继续执行
+        这样做不能保证子孙节点都小于这个父节点，因此要从第向下进行堆化
+        '''
+        left_child, right_child = self.get_child(parent), self.get_child(parent) + 1
+
+        largest = parent
+        if left_child < self.size and self.array[left_child] > self.array[largest]:
+            largest = left_child
+        if right_child < self.size and self.array[right_child] > self.array[largest]:
+            largest = right_child
+        
+        if largest != parent:
+            self.array[parent], self.array[largest] = self.array[largest], self.array[parent]
+            self.heapify(largest)
+        
+    def build(self):
+        '''
+        # 从底向上的建堆
+        # 因为根节点在第一个，顺序向下的，所以array[n/2+1....n]都是叶子节点，不需要进行平衡
+        # 从最底下的父节点进行建堆即可
+        # 一直到第一个 array[0]
+        # '''
+        for i in range(len(self.array)//2-1, -1, -1):
+            self.heapify(i)
+
+    def sort(self):
+        '''
+        # 堆排序
+        # 1. 构建最大堆
+        # 2. 每次将第一个数放到堆得最后，并且堆得长度-1 （每次取出最大的放到后面，顺序就出来了）
+        # 3. 取出之后的可能不是最大堆，需要重新平衡一下即可
+        '''
+        for i in range(len(self.array)-1, 0, -1):
+            self.array[0], self.array[i] = self.array[i], self.array[0]
+            self.size -= 1
+            self.heapify(0)
 ```
 - 复杂度：nlgn
 
 #### 优先队列
+1. 堆排序是一个优秀的算法，但在实际应用中，快速排序的性能一般会优于堆排序。尽管如此，堆这一数据结构仍然有很多应用。如：作为高效的优先队列，和堆一样，优先队列也有两种形式: 最大优先队列和最小优先队列。
+`优先队列(priority queue)`是一种用来维护由一组元素构成的集合 S 的数据结构，其中的每一个元素都有一个相关的值，称为`关键字(key)`。一个`最大优先队列`支持以下操作:
+   - INSERT(S,x): 把元素 x 插入集合 S 中。
+   - MAXIMUM(S): 返回其最大键值的元素。
+   - EXTRACT-MAX(S): 去掉并返回 S 中的具有最大键值的元素。
+   - INCREASE-KEY(S,x,k): 将元素 x 的关键字值增加到 k(k 不小于 x的原来值)
+
+```python
+class PriorityQueue(Heap):
+    def __init__(self, array):
+        super().__init__(array)
+
+    def insert(self, x):
+        """
+        堆中新增一个值
+        先在数组最后加一个负无穷，防止上浮报错
+        然后提升末尾位置的优先级，即赋值
+        然后堆得长度增加
+        """
+        self.array.append(-float("inf"))
+        self.increase(self.size, x)
+        self.size += 1
+
+    def maximum(self):
+        """
+        返回最大值
+        """
+        return self.array[0]
+    
+    def extract_max(self):
+        """
+        返回并从堆中删除最大值
+        """
+        max_value = self.array.pop(0)
+        self.size -= 1
+        self.heapify(0)
+        return max_value
+    
+    def increase(self, index, key):
+        """
+        提升一个索引位置的值
+        """
+        if key <= self.array[index]:
+            raise ValueError("new key is smailler than current key")
+        self.array[index] = key
+        while index > 0 and self.array[self.get_parent(index)] < self.array[index]:
+            self.array[index], self.array[self.get_parent(index)] = self.array[self.get_parent(index)], self.array[index]
+            index = self.get_parent(index)
+```
+### 第七章 快速排序
+快速排序的最坏的时间复杂度是 n^2, 但实际排序应用中最好的选择还是快速排序，因为他的平均性能好，他的期望时间复杂度是 nlgn
