--- a/算法与数据结构/算法导论/第二部分排序和顺序统计量.md
+++ b/算法与数据结构/算法导论/第二部分排序和顺序统计量.md
@@ -119,3 +119,143 @@ class PriorityQueue(Heap):
 ```
 ### 第七章 快速排序
 快速排序的最坏的时间复杂度是 n^2, 但实际排序应用中最好的选择还是快速排序，因为他的平均性能好，他的期望时间复杂度是 nlgn
+
+对数组A[p...r]进行快速排序，采用分治法：
+  - 分解：数组A被划分为两个子数组A[p...q-1]和A[q+1...r],还有A[q], 使得前面的都小于A[q],后面的都大于A[q]。
+  - 解决：然后递归调用快速排序，对两个子数组进行排序，一直递归到左右子数组都只有一个值时。
+  - 合并：子数组都是原址排序的，不需要进行合并
+  
+  ![avator](images/快速排序.jpg)
+
+```python
+def partition(array, left, right):
+    pivot = array[right]
+    i = left
+    for j in range(left, right):
+        if array[j] < array[right]:
+            array[i], array[j] = array[j], array[i]
+            i += 1
+    array[i], array[right] = array[right], array[i]
+    return i
+
+def quick_sort(array, left, right):
+    if left < right:
+        pivot = partition(array, left, right)
+        quick_sort(array, left, pivot-1)
+        quick_sort(array, pivot+1, right)
+```
+
+#### 线性时间排序
+目前为止，我们已经介绍了几种能在 Ω(nlgn)时间内排序 n 个数的算法。
+
+* 归并排序和堆排序达到了最坏情况下的上界
+* 快速排序在平均情况下达到该上界
+  这些算法都有一个共同点：`在排序的最终结果中，各元素的次序依赖于它们之间的比较`。我们把这类排序算法称为`比较排序`。本章将证明对包含 n 个元素的输入序列来说，任何比较排序在最坏情况下都要经过 Ω(nlgn) 次比较。因此，归并排序和堆排序是渐进最优的，并且任何已知的比较排序最多就是在常数因子上优于它们。
+  本章将介绍3种线性时间复杂度的排序算法：计数排序、基数排序和桶排序。当然，这3种算法是用运算而不是比较来确定排序顺序的，因此，下界 Ω(nlgn) 对它们是不适用的。
+
+#### 计数排序
+`计数排序`假设n个输入元素都是在0-k区间内的一个整数，对每个输入的元素x,确定小于x的元素个数，可以把它放入输出数组的位置上。
+```python
+def count_sort(array, k):
+    out = [0] * len(array)
+    tmp = [0] * (k+1)
+    
+    for j in array:
+        tmp[j] += 1
+    
+    for x in range(1, k+1):
+        tmp[x] += tmp[x-1]
+    
+    for i in array:
+        out[tmp[i]-1] = i
+        tmp[i] -= 1
+    return out
+```
+- 复杂度 O（n)
+#### 基数排序 radix sort
+`radix sort` 从最低位到最高位进行排序，每次只比较对应位置的数
+```python
+def radix_sort(array, num, base=10):
+    for x in range(num):
+        bucket = [[] for d in range(base)] # 10进制
+        for el in array:
+            radix = el // (10**x) % 10 # 取某位上的数
+            bucket[radix].append(el)
+        array = [el for els in bucket for el in els]
+    return array
+
+a = [123, 43, 12, 4432, 5, 9]
+print(radix_sort(a, 4))
+```
+- 复杂度 O（n)
+#### 桶排序 bucket sort
+桶排序假设输入的数据服从正太分布，平均情况下的复杂度是O（n)， **计数排序假设输入数据都属于一个小区间内的整数，而桶排序则假设输入是由一个随机过程产生，该过程将元素均匀、独立地分布在[0,1)区间上。**
+
+```python
+def insert_sort(array):
+    for i in range(1, len(array)):
+        num = array[i]
+        j = i - 1
+        while j >= 0 and array[j] > num:
+            array[j+1] = array[j]
+            j -= 1
+        array[j+1] = num
+
+def bucket_sort(array):
+    result = []
+    bucket = [[] for x in range(10)]
+    for el in array:
+        bucket[int(el*10)].append(el)
+    for bck in bucket:
+        insert_sort(bck)
+        result += bck
+    return result
+```
+
+| 排序方法 | 类别 | 平均复杂度 | 最差 | 最好 | 稳定性 | 空间复杂度 |
+| -------- | ---- | ------ | ---- | ---- | ------ | ---- |
+| 冒泡排序 | 交换类 | O(n^2) | O(n^2) | O(n) | 稳定 | O(1)(即原址) |
+| 选择排序 | 选择类 | O(n^2) | O(n^2) | O(n) | 不稳定 | O(1) |
+| 插入排序 | 插入类 | O(n^2) | O(n^2) | O(n) | 稳定 | O(1) |
+| 希尔排序 | 插入类 | O(nlogn) | O(nlog^2n) | O(nlog^2n) | 不稳定 | O(1) |
+| 归并排序 |  | O(nlogn) | O(nlogn) | O(nlogn) | 稳定 | O(n) |
+| 快速排序 | 交换类 | O(nlogn) | O(n^2) | O(nlogn) | 不稳定 | O(1) |
+| 堆排序   | 选择类 | O(nlogn) | O(nlogn) | O(nlogn) | 不稳定 | O(1) |
+| 计数排序 |      | O(n+k) | O(n+k) | O(n+k) | 稳定 | O(n+k) |
+| 基数排序 |      | O(n*base) | O(n*base) | O(n*base) | 稳定 | O(n*base) |
+| 桶排序 |      | O(n+k) | O(n+k) | O(n+k) | 稳定 | O(n+k) |
+
+
+### 中位数和顺序统计量
+#### 最大值和最小值
+```python
+def minnum(array):
+    min = A[0]
+    for el in array:
+        if min > el:
+            el = min
+    return min
+```
+
+**同时找到最大值和最小值**
+按上面代码的思路：只需要分别独立地找出最大值和最小值，这各需要 n-1次比较，共需2n-2次比较。
+
+实际上，我们只需要最多`3n/2`次比较就可以同时找出最大值和最小值，具体方法是记录已知的最小值和最大值。但我们并不是将每一个输入元素与当前的最小值和最大值进行比较——这样做的代价是每个元素需要2次比较，而是对输入元素成对地进行处理。首先，我们将一对输入元素相互进行比较，然后把较小的与当前最小值进行比较，把较大的与当前最大值进行比较。这样，对每两个元素共需3次比较。
+
+```python
+def min_max(array):
+    min, max = array[0], array[0]
+    for i in range(len(array) % 2, len(array), 2):
+        if array[i] > array[i+1]:
+            tmp_min, tmp_max = array[i+1], array[i]
+        else:
+            tmp_min, tmp_max = array[i], array[i+1]
+        
+        if tmp_max > max:
+            max = tmp_max
+        if tmp_min < min:
+            min = tmp_min
+    return max, min
+```
+- 复杂度 3n/2
+#### 期望为线性时间的选择算法
