--- a/算法与数据结构/算法导论/第二部分排序和顺序统计量.md
+++ b/算法与数据结构/算法导论/第二部分排序和顺序统计量.md
@@ -259,3 +259,28 @@ def min_max(array):
 ```
 - 复杂度 3n/2
 #### 期望为线性时间的选择算法
+在无序数组中找到第K小的数，使用分治算法，以快速排序为基础进行改良，与快速排序一样，我们仍然将输入数组进行递归划分，但与快速排序不同的是：快速排序会递归处理划分的两边，而 Ramdomized-select只处理划分的一边。这一差异会在性能分析中体现出来：快速排序的期望运行时间是O(nlgn)，而Ramdomized-select的期望运行时间为 O(n)。这里，假设输入数据都是互异的。
+
+```python
+def partition(array, left, right):
+    pivot, i = array[right], left
+    for j in range(left, right):
+        if array[j] < pivot:
+            array[i], array[j] = array[j], array[i]
+            i += 1
+    array[i], array[right] = array[right], array[i]
+    return i
+
+def randomized_select(array, left, right, k):
+    if left == right:
+        return array[left]
+    
+    q = partition(array, left, right)
+    i = q - left + 1
+    if i == k:
+        return array[q]
+    elif i > k:
+        return randomized_select(array, left, q-1, i)
+    elif i < k:
+        return randomized_select(array, q+1, right, i - k)
+```
