--- a/算法与数据结构/算法导论/第三部分数据结构.md
+++ b/算法与数据结构/算法导论/第三部分数据结构.md
@@ -35,3 +35,177 @@
    - 前序遍历 先输出父节点，再输出左子树，最后输出右子树
    - 中序遍历 先输出左子树，再输出父节点，最后输出右子树
    - 后续遍历 先输出左子树，再输出右子树，最后输出父节点
+3. 后继： 找一个节点的后继节点，就是找该节点的中序遍历的下一个节点。分两种情况：
+   - 如果该节点有右子树，则返回右子树中的最小值，就是大于该节点值得最小值。
+   - 如果没有，当前节点x，需要向上寻找，直到找到父节点a,不是a的父节点b的右子树，这时候b节点是x的后继
+  ```python
+  def successor(node):
+      if node.right != None:
+          return minimim(node.right)
+      y = node.parent
+      while y != None and node == y.right:
+         x = y
+         y = y.parent
+      return y
+  ```
+4. 遍历
+   - 深度遍历：前序中序后序
+   - 广度优先：利用栈来操作
+   ```python
+   def bfs(root):
+      stack = [root]
+      while stack:
+         curr = stack.pop(0)
+         print(curr.value)
+         if curr.left:
+            queue.append(curr.left)
+         if curr.right:
+            queue.append(curr.right)
+   ```
+5. 新增和删除
+   1. 新增， 与查找一样，直到找到叶子节点把值插进入
+   2. 删除：
+      - 如果没有孩子节点，直接删除，修改父节点。
+      - 只有一个孩子节点，将这个孩子提升到该节点位置上，并删除这个节点
+      - 当前节点z有两个孩子，需要找到后继节点（因为有右子树，一定在右子树中）x，这里的后继节点x分两种情况：
+         1. x有右子树（一定没有左子树，否则就不是后继节点了），用x的右子树替换x，用x替换z，删除z
+         2. x没有右子树：直接用x替换z，然后修改子树和父节点，删掉z
+
+
+```python
+class Node:
+    # 节点 有值，指针分别指向父节点，左右子节点
+    def __init__(self, value):
+        self.value = value
+        self.left = None
+        self.right = None
+        self.parent = None
+
+class Tree:
+    def __init__(self):
+        self.root = None
+
+    def inorder_walk(self, node):
+        # 中序遍历
+        if node != None:
+            self.inorder_walk(node.left)
+            print(node.value)
+            self.inorder_walk(node.right)
+
+
+    def preinorder_walk(self, node):
+        # 前序遍历
+        if node != None:
+            print(node.value)
+            self.preinorder_walk(node.left)
+            self.preinorder_walk(node.right)
+
+    def postorder_walk(self, node):
+        # 后续遍历
+        if node != None:
+            self.postorder_walk(node.left)
+            self.postorder_walk(node.right)
+            print(node.value)
+    
+    def breadth_first_search(self):
+        # 广度优先
+        if self.root is None:
+            return
+        stack = [self.root]
+        while stack:
+            curr = stack.pop(0)
+            print(curr.value)
+            if curr.left:
+                stack.append(curr.left)
+            if curr.right:
+                stack.append(curr.right)
+
+    def search(self, node, k):
+        # 查找关键字为K的节点指针
+        if node == None or k == node.value:
+            return node
+        if k < node.value:
+            return self.search(node.left, k)
+        else:
+            return self.search(node.right, k)
+    
+    def iterative_search(self, k):
+        node = self.root
+        while node != None and k != node.value:
+            if k < node.value:
+                node = node.left
+            else:
+                node = node.right
+        return node
+
+    def minimum(self, node):
+        # 最小值
+        while node.left != None:
+            node = node.left
+        return node
+
+    def maximum(self, node):
+        # 最大值
+        while node.right != None:
+            node = node.right
+        return node
+    
+    def successor(self, node):
+        # 计算一个后继节点，中序遍历的下一个
+        # 1. 有右子树，则是右子树中最小的值
+        # 2. 没有右子树，就向上找到一个节点不是该父节点的右子树时候，这个父节点就是后继节点。
+        if node.right:
+            return self.minimum(node.right)
+        y = node.parent
+        while y!=None and node == y.right:
+            node = y
+            y = node.parent
+        return y
+
+    def insert(self, value):
+        # 插入一个新值
+        new_node = Node(value)
+        y = None
+        curr = self.root
+        while curr != None:
+            y = curr
+            if value < curr.value:
+                curr = curr.left
+            else:
+                curr = curr.right
+        new_node.parent = y
+        if y == None:
+            self.root = new_node
+        elif new_node.value < y.value:
+            y.left = new_node
+        else:
+            y.right = new_node
+
+    def transplant(self, target, source):
+        # 用source节点替换掉target节点
+        if target.parent == None:
+            self.root = source
+        elif target == target.parent.left:
+            target.parent.left = source
+        else:
+            target.parent.right = source
+        if source != None:
+            source.parent = target.parent
+
+    def delete(self, node):
+        if node.left == None:
+            self.transplant(node, node.right)
+        elif node.right == None:
+            self.transplant(node, node.left)
+        
+        else:
+            y = self.minimum(node.right)
+            if y.parent != node:
+                self.transplant(y, y.right)
+                y.right = node.right
+                y.right.parent = y
+            self.transplant(node, y)
+            y.left = node.left
+            y.left.parent = y
+```
+
