--- a/算法与数据结构/算法导论/第三部分数据结构.md
+++ b/算法与数据结构/算法导论/第三部分数据结构.md
@@ -29,7 +29,7 @@
 #### 散列函数
 将每个关键字尽可能的散列到M个槽位上
 
-### 二叉搜索树
+### 第12章 二叉搜索树
 1. 属性：左子孙节点小于父节点，右子孙节点大于父节点
 2. 遍历：对于父节点来看，采用递归来输出
    - 前序遍历 先输出父节点，再输出左子树，最后输出右子树
@@ -209,3 +209,19 @@ class Tree:
             y.left.parent = y
 ```
 
+### AVL树
+AVL树是一种特殊的二叉搜索树，有如下性质：
+
+- 具有二叉查找树的全部特性
+- 任意节点的左子树和右子树的高度差 <= 1
+AVL是最先发明的一种自平衡二叉查找树，像普通二叉树一样组织数据。所不同的是，AVL的每一个节点都附带了一个`平衡因子`，其值代表了左子树和右子树的高度之差。对于每一次改变其平衡性的操作，AVL树都通过执行一次`旋转`操作来使其重新平衡。每一次插入和删除操作最多可能有`log n`个节点被旋转。
+
+因此，平衡树基于这种特点就可以保证其不会出现大量节点偏向于一边的情况了，于是，通过平衡树，我们解决了二叉查找树递增(减)插入情况的缺陷。对于有 n 个节点的平衡树，查找、插入和删除在平均和最坏情况下的时间复杂度都是O(logn)。插入和删除元素的操作则可能需要借由一次或多次树旋转，以实现树的重新平衡。
+**查找**
+可以像普通二叉查找树一样的进行，所以耗费O(logn)时间。
+
+**插入**
+
+AVL树的插入操作和普通二叉树类似。只不过**在每一次插入后，需要重新计算子树高度**。如果这次插入操作改变了树的平衡性，就需要旋转节点以使树重新平衡，**所谓的左旋和右旋都是以子树为原点的**。
+
+**左旋**
