--- a/算法与数据结构/算法导论/第三部分数据结构.md
+++ b/算法与数据结构/算法导论/第三部分数据结构.md
@@ -272,12 +272,17 @@ AVL树的插入操作和普通二叉树类似。只不过**在每一次插入后
 
 `红黑树(red-black tree)`是许多“平衡”搜索树中的一种，可以保证在最坏情况下基本动态集合操作的时间复杂度为 O(logn)。
 
+一棵右n个内部节点的红黑树的高度至多为 2lg(n+1)
+
 红黑树首先是一棵二叉搜索树，它在每个结点上增加了一个储存位来表示结点的颜色，通过对任何一条从根到叶子的简单路径上各个结点的颜色进行约束，红黑树确保没有一条路径会比其它路径长出2倍，因而是**近似平衡的, **不会像平衡树那样，频繁着破坏红黑树的规则，所以不需要频繁地调整**。其牺牲了部分平衡性以换取插入/删除操作时少量的旋转操作。**
 
 树中的每个结点有5个属性：color、key、left、right 和 p，如果一个结点没有子结点或父结点，则该结点相应指针属性的值为 NIL。
 
 
 #### 1. 旋转
+
+**旋转不会改变树的中序遍历结果**
+
 左旋
 
 ![avator](images/left_totate.png)
@@ -364,3 +369,17 @@ N 的父节点是红色（节点 P 为红色，其父节点必然为黑色）。
 
 
 #### 3. 删除
+相较于插入操作，红黑树的删除操作则要更为复杂一些。删除操作首先要确定待删除节点有几个孩子，如果有两个孩子，不能直接删除该节点。而是要先找到该节点的前驱（该节点左子树中最大的节点）或者后继（该节点右子树中最小的节点），然后将前驱或者后继的值复制到要删除的节点中，最后再将前驱或后继删除。
+由于前驱和后继至多只有一个孩子节点，这样我们就把原来要删除的节点有两个孩子的问题转化为只有一个孩子节点的问题，问题被简化了一些。我们并不关心最终被删除的节点是否是我们开始想要删除的那个节点，只要节点里的值最终被删除就行了，至于树结构如何变化，这个并不重要。
+
+红黑树删除操作的复杂度在于删除节点的颜色，当删除的节点是红色时，直接拿其孩子节点补空位即可。因为删除红色节点，性质5（从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点）仍能够被满足。
+
+当删除的节点是黑色时，那么所有经过该节点的路径上的黑节点数量少了一个，破坏了性质5。如果该节点的孩子为红色，直接拿孩子节点替换被删除的节点，并将孩子节点染成黑色，即可恢复性质5。但如果孩子节点为黑色，处理起来就要复杂的多。分为6种情况，下面会展开说明。
+
+在展开说明之前，我们先做一些假设，方便说明。这里假设最终被删除的节点为X（至多只有一个孩子节点），其孩子节点为N，X的兄弟节点为S，S的左节点为 SL，右节点为 SR。接下来讨论是建立在节点 X 被删除，节点 N 替换X的基础上进行的。
+
+![avator](images/红黑树-删除.jpg)
+
+
+[参考](https://zhuanlan.zhihu.com/p/91960960)
+
