--- a/算法与数据结构/算法导论/第四部分高级设计与分析技术.md
+++ b/算法与数据结构/算法导论/第四部分高级设计与分析技术.md
@@ -126,5 +126,41 @@ LCS的递归式：
 c[i,j]表示：(x1,x2....xi) 和 (y1,y2...yj) 的最长公共子序列的长度（整数）。
 
 ```python
+def lcs(s1, s2):
+    c = [[0 for _ in range(len(s2)+1)] for _ in range(len(s1)+ 1)]
+    for i in range(1, len(s1)+1):
+        for j in range(1, len(s2)+1):
+            if s1[i-1] == s2[j-1]:
+                c[i][j] = c[i-1][j-1] + 1
+            else:
+                c[i][j] = max(c[i-1][j], c[i][j-1])
+    return c[len(s1)][len(s2)]
 
+s1 = "BDCABA"
+s2 = "ABCBDAB"
+x = lcs(s1, s2)
+print(x)
 ```
+```java
+public static int lcs(String str1, String str2){
+        int[][] c = new int[str1.length()+1][str2.length()+1];
+        for (int row = 0; row <= str1.length(); row++) {
+            c[row][0] = 0;
+        }
+        for (int column = 0; column <= str2.length(); column++) {
+            c[0][column] = 0;
+        }
+        for (int i = 1; i <= str1.length(); i++) {
+            for (int j = 1; j <= str2.length(); j++) {
+                if (str1.charAt(i-1) == str2.charAt(j-1)){
+                    c[i][j] = c[i-1][j-1]+1;
+                } else {
+                    c[i][j] = Math.max(c[i-1][j], c[i][j-1]);
+                }
+            }
+        }
+        return c[str1.length()][str2.length()];
+    }
+```
+
+### fib数列
