--- a/算法与数据结构/算法导论/第四部分高级设计与分析技术.md
+++ b/算法与数据结构/算法导论/第四部分高级设计与分析技术.md
@@ -163,4 +163,75 @@ public static int lcs(String str1, String str2){
     }
 ```
 
-### fib数列
+## 第16章 贪心算法
+求解最优化问题的算法通常需要经过一系列的步骤，在每个步骤都面临多种选择。对于许多最优化问题，使用动态规划算法来求解最优解有些杀鸡用牛刀了，可以使用更简单、高效的算法：`贪心算法(greedy algorithm)`。它在每一步都做出当时看起来最佳的选择。也就是说，它总是做出局部最优的选择，寄希望于这样的选择能得出全局最优解。
+
+贪心算法并不保证得到最优解，但对很多问题确实可以求得最优解。
+
+### 活动选择问题
+
+假设我们存在这样一个活动集合S={a1,a2,...,an},这些活动占用一个共同的资源(比如一个阶梯教室),其中每一个活动ai都有一个开始时间si和结束时间fi保证`(0≤si<fi)`,如果两个活动ai和aj的占用时间[si,fi),[sj,fj)不重叠，那么就说明这两个活动是兼容的。在活动选择问题中，我们希望选出一个最大兼容活动集。
+假定在这个活动集合里面，**都是按照结束时间fi进行升序排序的**（这一步很重要，第一步若要贪，肯定是选最先结束的!）
+
+策略： 每次选择最先结束的
+
+1. 递归贪心算法：
+   
+```python
+def recuActSel(start, finlish, k, n):
+    m = k + 1
+    while m < n and start[m] <= finlish[k]:
+        m += 1
+    if m < n:
+        A.append(m)
+        recuActSel(start, finlish, m, n)
+    else:
+        return
+
+A = []
+s = [0, 1, 3, 0, 5, 3, 5, 6, 8, 8, 2, 12, ]
+f = [0, 4, 5, 6, 7, 9, 9, 10, 11, 12, 14, 16, ]
+recuActSel(s, f, 0, len(f))
+```
+2. 迭代贪心算法：
+
+```python
+def greedy_activity_selector(start, finlish):
+    A = [1]
+    k = 1
+    for m in range(2, len(finlish)):
+        if start[m] > finlish[k]:
+            A.append(m)
+            k = m
+    
+s = [0, 1, 3, 0, 5, 3, 5, 6, 8, 8, 2, 12, ]
+f = [0, 4, 5, 6, 7, 9, 9, 10, 11, 12, 14, 16, ]
+A = greedy_activity_selector(s, f)
+```
+
+### 贪心算法原理
+一般地，我们可以按如下步骤设计贪心算法：
+* 将最优化问题转化为这样的形式：对其做出一次选择后，只剩下一个子问题需要求解。
+* 证明做出贪心选择后，原问题总是存在最优解，即贪心算法总是安全的。
+* 证明做出贪心选择后，剩余子问题满足性质：其最优解与贪心选择组合即可得到原问题的最优解，这样就的得到了最优子结构。
+  如何证明一个贪心算法是否能求解一个最优化问题呢？并没有适合所有情况的方法，但贪心选择性质和最优子结构是两个关键要素。
+
+**贪心选择性质(greedy-choice property)**
+我们可以通过做出局部最优(贪心)选择来构造全局最优解。换句话说，当进行选择时，我们直接做出在当前问题中看起来最优的选择，而不必考虑子问题的解。
+这也是贪心算法与动态规划的不同之处：在动态规划中，每个步骤都要进行一次选择，但选择通常依赖于子问题的解。因此，我们通常以一种自底向下的方式求解动态规划问题，先求出较小的子问题，然后是较大的子问题(也可自顶向下，但需要备忘机制)。而贪心算法进行选择时可能依赖之前做出的选择，但不依赖任何将来的选择或是子问题的解。因此，与动态规划先求解子问题才能进行第一次选择不同，贪心算法在进行第一次选择之前不求解任何子问题。
+
+**贪心算法和动态规划**
+
+0-1背包问题
+
+> 一个正在抢劫商店的人发现商店里有 n 件物品，第i件物品价值是v[i]美元，重w[i]磅。但他的背包只能容纳 W(整数) 磅重的商品，求解将哪些物品装入背包可使价值总和最大。
+
+分数背包问题
+
+> 与0-1背包问题类似，但对每个商品，可只取走其一部分(价值按重量算)。
+
+两个背包问题都具有最优子结构性质。对于0-1背包问题，考虑重量不超过 W 而价值最高的方案，如果将商品 j 拿走，则剩余商品必须是重量不超过 W - wj 的价值最高的方案。
+虽然两个问题相似，但显然我们用贪心策略可以求解分数背包问题，却不能求解0-1背包问题。
+
+比如：总3个商品，(商品1：10磅，60美元)，(商品2：20磅，100美元)，(商品3：30磅，120美元),背包容量50磅。
+按贪心算法来分析：商品1单价最高，应拿走商品1，但实际最优解应该是拿取商品2和商品3。
