--- a/算法与数据结构/算法导论/第三部分数据结构.md
+++ b/算法与数据结构/算法导论/第三部分数据结构.md
@@ -86,12 +86,22 @@ class Tree:
         self.root = None
 
     def inorder_walk(self, node):
-        # 中序遍历
+        # 中序遍历 -- 递归
         if node != None:
             self.inorder_walk(node.left)
             print(node.value)
             self.inorder_walk(node.right)
 
+    def preinorder_walk_loop(self, node):
+        # 非递归 使用栈
+        stack = [node]
+        while stack:
+            cur = stack.pop()
+            if cur.right:
+                stack.append(cur.right)
+            if cur.left:
+                stack.append(cur.left)
+            print(cur.val)
 
     def preinorder_walk(self, node):
         # 前序遍历
