--- a/数据库/高性能的mysql/第五章 创建高性能的索引.md
+++ b/数据库/高性能的mysql/第五章 创建高性能的索引.md
@@ -227,3 +227,110 @@ mysql> EXPLAIN SELECT last_name,first_name FROM people WHERE last_name = 'xx' OR
 
 #### 聚簇索引
 聚簇索引的叶子节点就是数据节点，而非聚簇索引的叶子节点仍然是索引节点，只不过有指向对应数据块的指针。
+
+聚簇索引是一种数据存储的方式。InnoDB的聚簇索引实际上是在同一个结构中保存了B+Tree索引和行。`“聚簇”表示数据行和相邻的键值紧凑的存储在一起`。
+
+聚簇索引的数据保存在索引的叶子节点中。因为数据不能存放在不同的两个地方，所以一个表只有一个聚簇索引。这里指的是InnoDB默认的就是聚簇索引，其他的索引就是二级索引了，也是一个B-tree,不过叶子节点保存的是主键，因为聚簇索引就是按照主键来保存的。当通过自定义的索引找到主键时，想取出数据，需要用主键去聚簇索引里查找，找到叶子节点并返回。这个过程就是回表。
+
+![avator](images/聚簇索引.jpg)
+
+聚簇索引的优点：
+  * 可以把相关数据保存在一起
+  * 数据访问更快。因为找到聚簇索引时就拿到了数据。
+  * 使用覆盖索引扫描的查询可以直接使用叶节点的主键值。
+
+聚簇主键可能对性能有帮助，但也可能导致性能变差。要仔细的考虑聚簇索引，尤其是将表的存储引擎改变时。
+
+聚簇索引的缺点：
+  * **聚簇数据最大限度的提高了I/O密集型应用的性能**，但如果数据全部放到内存中，则访问的顺序也没那么重要了，聚簇索引的也就没有优势了。
+  * 插入速度严重依赖于插入的顺序。如果插入的是非自增长主键的数据，每次插入都会改变B-Tree之前的数据状态，从而导致也分裂。
+  * 更新聚簇索引的代价高，会强制将每个被更新的行移动到新的位置。
+  * 基于聚簇索引的表在插入新行，或者主键被更新导致需要移动时，可能面临页分裂的问题。
+  * 聚簇索引可能会导致全表的扫描变慢。
+  * 二级索引（非聚簇索引）可能比想象中大，因为在二级索引中包含了引用行的主键列
+  * 二级索引访问需要两次索引查找，回表。
+
+
+页分裂：页1，页2都满了，但是要在页1末尾加一个值，页1已经满了无法插入，页2也满了，这时候需要新增一个页。把值放进去，并且修改页1的指针指向页3， 页3指向页2。在树的角度来看没有问题，但实际上新增的页可能并不在原来的同一个区中，他的顺序是乱的，可能会导致占用更多的磁盘空间。
+
+在InnoDB中，聚簇索引就是表。MyISAM则不同，需要一个独立的行存储。聚簇索引的每个叶子节点都包含了主键值，事务ID，用于事务和多版本控制（mvvc)的回滚指针以及剩余列。
+
+![avator](images/聚簇和非聚簇表对比图.png)
+
+#### 覆盖索引
+
+如果一个索引包含或者覆盖所需要查询的字段的值，称之为覆盖索引。因为在二级索引时可以获取到要查询的值，不用再回表。
+
+覆盖索引的优点：
+  * 索引条目通常远小于数据行大小，所以如果只需要读取索引，mysql会极大的减少数据访问量。
+  * 因为索引时按照列值得顺序存储的（单页内），对于I/O密集型的范围查询比随机从磁盘读取每一行的I/O要少的多。
+  * 一些存储引擎如MyISAM在内存中只缓存索引，数据则依赖操作系统来缓存，每次访问数据都要系统调用。因此不调用的话更节省I/O和时间
+  * 对于聚簇索引，覆盖索引可以避免回表。
+
+只有BTree可以做覆盖索引，因为覆盖索引必须存储索引列的值。
+
+当发起一个被索引覆盖的查询时，在EXPLAIN的Extra列可以看到Using index信息。
+
+#### 使用索引扫描做排序
+mysql有两种方式生成有序的结果：排序操作，索引顺序扫描。
+如果在EXPLAIN的type列的值是index，则表明mysql使用了索引扫描来做排序。
+
+mysql可以使用同一个索引既满足排序，又用于查找行，设计索引时应该尽可能的同时满足两种任务。
+
+**只有当索引的列顺序和ORDER BY子句的顺序完全一致，并且所有列的排序方向都一样时，mysql才能使用索引来对结果做排序**。如果查询需要关联多张表，则只有当ORDER BY子句引用的字段全部为第一个表时，才能使用索引做排序。ORDER by子句和查找型查询的限制是一样的：需要满足索引的最左前缀的要求。
+
+有一种情况ORDER BY子句可以不满足索引的最左前缀的要求，就是前导列为常量的时候。示例：key name(first_name, last_name)
+`select first_name, last_name from people where first_name = "m" order by last_name;`
+#### 重复索引和冗余索引
+mysql允许在相同的列上创建多个索引。重复索引是指在相同的列上按照相同的顺序创建相同类型的索引，应该避免。冗余索引和重复索引不同，如果创建了索引（A, B),在创建索引（A）就是冗余索引，因为这只是前一个索引的前缀索引。
+
+大多数情况下都不需要重复索引（除非是在同一列上创建不同类型的索引来满足不同的查询需求，另外，如果索引类型不同，也不算重复索引）
+
+有时会无意间创建重复索引，比如给加了唯一的列再加索引：
+mysql的unique(唯一限制)和Index(主键限制)都是通过索引实现的。
+
+而冗余索引通常发生在为表添加新索引的时候，比如先创建了 (A), 再创建（A, B)
+
+大多数情况下都不需要冗余索引，应该尽量扩展已有的索引而不是创建新索引。但也有时候处于性能方面的考虑需要冗余索引，因为扩展已有的索引 会导致其变化太大，从而影响其他使用该索引的查询的性能。
+
+例如，如果在整数列上有一个索引，现在需要额外增加一个很长的VARCHAR列来扩展该索引，那性能可能会急剧下降。特别是有查询把这个索引当做覆盖索引的时候。
+
+一般来说，增加新索引会导致INSERT, UPDATE, DELETE等操作速度变慢，特别是当新增索引后导致达到了内存瓶颈的时候。
+
+#### 索引与锁
+**索引可以让查询锁定更少的行**。如果查询从不访问那些不需要的行，那么就能锁定更少的行。必要性：
+  * Innodb的行锁效率虽然高，内存使用也少，但是锁定行的时候还是会带来额外的开销。所以没必要锁定不需要的行。
+  * 锁定过多的行会增加锁争用，减少并发性。
+
+例子：
+```SQL
+SET AUTOCOMMIT = 0;
+BEGIN;
+SELECT actor_id from actor where actor_id < 5 and actor_id <>1 for update;
+end;
+```
+这里的查询只需要 2-4的行，但是会锁定 1-4.这里的底层的存储引擎的操作是：“从索引的开头开始获取满足条件 actor_id < 5的记录”，服务器并没有告诉InnoDB可以过滤掉第一行。所以会锁定第一行。
+
+关于InnoDB、索引和锁有一些很少人注意到的细节。**InnoDB在二级索引上使用共享锁（读锁），但是访问主键索引需要排它锁（写锁）。这消除了使用覆盖索引的可能，并且使SELECT...FOR UPDATE比 lock in share mode或非锁定查询要慢的多。还有就是，"select for update,lock in share mode这两个提示会导致某些优化器无法使用，比如覆盖索引，这些锁定经常会被滥用，很容易造成服务器的锁争用问题，实际上应该尽量避免使用这两个提示，通常都有更好的方式可以实现同样的目的。
+
+#### 使用索引注意事项
+* 支持多种过滤条件
+* 避免多个范围条件
+* 优化排序
+* 维护索引和表
+* 找到并修复损坏的表（check table,repair table)
+* 跟新索引统计信息
+* 减少索引和数据的碎片
+
+
+通过本章可以看到， 索引是一个非常复杂的话题! MySQL和存储引擎访问数据的方式，加上索引的特性， 使得索引成为一个影响数据访问的有力而灵活的工作（无论数据是在磁盘中还是在内存中）。
+
+在选择索引和编写利用这些索引的查询时， 有如下三个原则始终需要记住：
+
+* 单行访问是很慢的。特别是在机械硬盘存储中(SSD的随机I/O 要快很多， 不过这一点仍然成立）。如果服务器从存储中读取一个数据块只是为了获取其中一行， 那么就浪费了很多工作。最好读取的块中能包含尽可能多所需要的行。使用索引可以创建位置引用以提升效率。
+
+* 按顺序访问范围数据是很快的，这有两个原因。第一，顺序I/O不需要多次磁盘寻道，所以比随机I/O要快很多（特别是对机械硬盘）。第二， 如果服务器能够按需要顺序读取数据， 那么就不再需要额外的排序操作， 井且GROUP BY查询也无须再做排序和将行按组进行聚合计算了。
+
+* 索引覆盖查询是很快的。如果一个索引包含了查询需要的所有列， 那么存储引擎就不需要再回表查找行。这避免了大最的单行访问， 而上面的第1点已经写明单行访问是很慢的。
+
+总的来说， 编写查询语句时应该尽可能选择合适的索引以避免单行查找、尽可能地使用数据原生顺序从而避免额外的排序操作， 井尽可能使用索引覆盖查询。
