--- a/操作系统/常见问题.md
+++ b/操作系统/常见问题.md
@@ -140,3 +140,10 @@
        1. 程序可以使用一系列相邻的虚拟地址来访问物理内存中不相邻的大内存婚宠去。
        2. 程序可以使用一些列虚拟地址来访问大于可用物理地址内存的内存缓冲区，。当物理内存的供应量变小时，内存管理器会将物理内存也保存到磁盘文件。数据或者代码页会根据需要在物理内存和磁盘之间移动。
        3. 不同进程间使用的虚拟地址彼此隔离。一个进程的代码无法改变另一个进程中正在使用的物理地址。
+
+### 虚拟内存
+1. 什么是虚拟内存
+很多时候我们点开了很多占内存的软件，这些软件占用的内存可能已经远远超出了我们电脑本身具有的物理内存。为什么可以这样，因为虚拟内存的存在。通过虚拟内存可以让程序拥有超过系统物理内存大小的可用内存空间。另外，虚拟内存为每个进程提供了一个一致的，私有的地址空间，他让每个进程产生了一种自己可以独享主存的错局（每个进程拥有一片连续完整的内存空间），这样会更加有效的管理内存并减少出错。
+
+虚拟内存是计算机系统内存管理的一种技术，我们可以手动的设置自己电脑的虚拟内存。虚拟内存的重要意义是它定义了一个连续的虚拟地址空间，并且把内存扩展到硬盘空间。
+
