--- a/操作系统/常见问题.md
+++ b/操作系统/常见问题.md
@@ -142,8 +142,55 @@
        3. 不同进程间使用的虚拟地址彼此隔离。一个进程的代码无法改变另一个进程中正在使用的物理地址。
 
 ### 虚拟内存
-1. 什么是虚拟内存
+1. 什么是虚拟内存（linux 交换空间）
 很多时候我们点开了很多占内存的软件，这些软件占用的内存可能已经远远超出了我们电脑本身具有的物理内存。为什么可以这样，因为虚拟内存的存在。通过虚拟内存可以让程序拥有超过系统物理内存大小的可用内存空间。另外，虚拟内存为每个进程提供了一个一致的，私有的地址空间，他让每个进程产生了一种自己可以独享主存的错局（每个进程拥有一片连续完整的内存空间），这样会更加有效的管理内存并减少出错。
 
-虚拟内存是计算机系统内存管理的一种技术，我们可以手动的设置自己电脑的虚拟内存。虚拟内存的重要意义是它定义了一个连续的虚拟地址空间，并且把内存扩展到硬盘空间。
+虚拟内存是计算机系统内存管理的一种技术，我们可以手动的设置自己电脑的虚拟内存。这里的虚拟内存不是简单的“使用硬盘空间来扩展内存”，虚拟内存的重要意义在于它定义了一个连续的虚拟地址空间，并且把内存扩展到硬盘空间只是使用虚拟内存的必然结果，虚拟内存空间会存在硬盘中，并且会被内存缓存，有的操作系统还会在内存不够的情况下， 将某一进程的全部内存全部放入硬盘中，并在切换到该进程的时候再从硬盘读取。虚拟内存主要提供了如下三个重要的能力：
+ 1. 它把主存看作为一个存储在硬盘上的虚拟地址空间的告诉缓存，并且只在主存中缓存活动区域。
+ 2. 它为每个进程提供了一个一致的地址空间，从而降低了程序员对内存管理的复杂性。
+ 3. 他还保护了每个进程的地址空间不会被其他进程破坏。
+
+[虚拟内存的那点事儿](https://juejin.im/post/59f8691b51882534af254317)
+
+2. 局部性原理
+
+    局部性原理是虚拟内存技术的基础，正式因为程序运行具有局部性原理，才可以只装入部分程序到内存就可以开始运行。
+    局部性原理具体表现在下面两个方面：
+    1. 时间局部性： 如果程序中的某条指令一旦执行，不久以后指令可能再次执行，如果某数据被访问过，不久以后该数据可能再次被访问。产生时间局部性的典型原因，是由于在程序中存在大量的循环操作。
+    2. 空间局部性： 一旦程序访问了某个存储单元，在不久以后，某附近的存储单元也将被访问，即程序在一段时间内所访问的地址，可能集中在一定范围内，这是因为指令通常是顺序存放、顺序执行的，数据也一般是以向量，数组，表等形式聚簇存储的。
+
+    时间局部性是通过将近来使用的指令和数据保存到高速缓存存储器中，并使用高速缓存的层次结构实现。空间局部性通常是使用较大的高速缓存，并将预期机制集成到高速缓存控制逻辑中实现。虚拟内存技术实际上就是建立了“内存--外存”的两级存储器结构，利用局部性原理实现高速缓存。
+
+3. 虚拟存储器
+   
+   基于局部性原理，在程序装入时，可以将程序的一部分装入内存，而将其他部分留在外存，就可以启动程序运行。由于外存旺旺比内存大很多，所以我们运行的软件的内存大小实际上是可以比计算机系统实际的内存大的。在程序执行过程中，当所访问的信息不再内存时，由操作系统将所需的部分调入内存，然后继续执行程序。另一方面，操作系统将内存中暂时不使用的内存换到外存上，从而腾出空间存放将要调入内存的信息。这样，计算机好像为用户提供了一个比实际内存大很多的存储器---虚拟存储器。
+   实际上，我觉得虚拟内存同样是一种时间换空间的策略，利用CPU的计算时间，页的调入调出花费的事件，换来了一个虚拟的更大的空间来支持程序的原型。
+
+4. 虚拟内存的技术实现
+    
+    虚拟内存的实现需要建立在离散分配的内存管理方式的基础上。虚拟内存的实现有以下三种方式：
+    1. 请求分页存储管理： 建立在分页管理之上，为了支持虚拟存储器功能而增加了请求调页功能和页面置换功能。请求分页式是目前最常用的一种实现虚拟存储器的方式。请求分页存储管理系统中，在作业开始运行之前，仅装入当前要执行的部分段即可运行。加入在作业运行的过程中发现要访问的页面不在内存，则由处理器通知操作系统按照对应的页面置换算法将相应的页面调入主存，同时操作系统也可以将暂时不用的页面置换到外存中。
+    2. 请求分段存储管理： 建立在分段存储管理之上，增加了请求调段功能，分段置换功能。请求分段储存管理方式如同请求分页储存管理方式一样，在作业开始运行之前，仅装入当前要执行的部分段即可运行；在执行过程中，可使用请求调入中断动态装入要访问但又不在内存的程序段，当内存已满，而又需要装入新的段时，根据置换功能适当调出某个段，以便腾出空间而装入新的段。
+    3. 请求段页式存储管理。
+
+5. 请求分页和分页存储管理的区别：
+
+    请求分页存储管理建立在分页管理之上。他们的根本区别是 是否将程序全部所需的全部的地址空间都装入主存，这也是请求分页存储管理可以提供虚拟内存的原因。
+    他们之间的根本区别在于是否将一个作业的全部地址同时装入主存。请求分页存储管理不要求将作业全部地址空间同时装入，基于这一点，请求分页存储管理可以提供虚拟内存，而分页存储管理却不能提供。
+
+    不管哪种实现方式，一般都需要做到:
+    1. 一定容量的内存和外存：在载入程序的时候，只需要将程序的一部分装入内存，而其他部分留在外存，然后程序就可以执行了。
+    2. 缺页中断：如果需执行的指令或访问的数据尚未在内存，称为缺页或者缺段，则由处理器通知操作系统将相应的页面或者段调入内存，然后继续执行程序。
+    3. 虚拟地址空间： 逻辑地址到物理地址的转变。
+
+6. 常见间的页面置换算法：
+   地址映射过程中，若在页面上发现所要访问的页面不在内存中，则发生缺页中断。
+   当发生缺页中断时，如果当前内存中没有空闲的页面，操作系统必须在内存中选择一个页面将其移除内存，以便为即将调入的页面腾出空间。用来选择淘汰哪一页的规则叫做页面置换算法，也就是淘汰页面的规则：
+
+    1. 最佳置换算法（OPT）（理想置换算法）：从主存中移除永远不再需要的页面，如果没有这样的页面，则选择最长时间不需要访问的页面。这样可以保证最低的缺页率。一般用来衡量其他算法。
+    2. 先进先出页面置换算法（FIFO）：最简答的置换算法，当需要淘汰一个页时，选择驻留在主存中时间最长的页面进行淘汰。实现简单，但是性能差。
+    3. 最近未使用页面置换算法（LRU）：利用局部性原理，当需要淘汰一个页面时，总是选在最近一段时间内最久不访问的页进行淘汰。性能最接近OPT，但实现比较困难，开销大。
+    4. 时钟置换算法（CLOCK）：试图以较小的开销进行LRU的性能。具体做法是给每一帧关联一个附加位，称为使用位。当某一页首次装入主存时，该帧的使用位设置为1；当页再次被访问到，使用位也置为1。对于页面置换算法，用于替换的候选帧集合看做一个循环缓冲区，并且有一个指针与之相关联。当某一页被替换时，该指针被设置成指向缓冲区的下一帧。当需要替换一页时，操作系统扫描缓冲区，以查找使用位被置为0的帧。每当遇到一个使用位为1的帧，则将其使用位置为0。如果开始这个过程时，缓冲区所有的帧的使用位均为0，则选择第一个帧替换；如果都为1， 则指针完整的循环一周，把所有的都置为0.并且停留在最初的位置上，替换该帧的页。
+    ![avator](images/时钟置换算法.png)
+    5. 最少使用页面排序算法（LFU）：淘汰访问频率最低的元素。
 
