--- a/算法与数据结构/背包九讲/01背包.md
+++ b/算法与数据结构/背包九讲/01背包.md
@@ -109,9 +109,8 @@ def ks3(n, v, c, w):
     w.insert(0, 0)
     dp = [0] * (v+1)
     for i in range(1, n+1):
-        for j in range(v, 0, -1):
-            if c[i] <= j:
-                dp[j] = max(dp[j], dp[j-c[i]]+w[i])
+        for j in range(v, c[i]+1, -1):
+            dp[j] = max(dp[j], dp[j-c[i]]+w[i])
     return dp[v]
 test_knapsack(n, v, c, w)
 ```
