--- a/后端/java/mybatis/记录.md
+++ b/后端/java/mybatis/记录.md
@@ -201,7 +201,7 @@ SqlSessionFactory factory = new SqlSessionFactoryBuilder().build(reader, environ
 3.2 指定一个包名，Mybatis会在包名下搜索需要的Java Bean。
 ```xml
 <typeAliases>
-    <typeAlias package="com.chen.pojo"/>
+    <package name="com.chen.pojo"/>
 </typeAliases>
 <!-- 之后再写sql配置xml时候可以直接使用resultType=user -->
 ```
@@ -327,3 +327,107 @@ log4j.logger.java.sql.PreparedStatement=DEBUG
 mapperxml中paramerType="map"; limit #{startIndex},#{pageSize}
 推荐，开发快
 2. 使用RowBound
+
+## 使用注解
+
+```java
+public interface UserMapper{
+    @Select("select * from user where id = #{id} and name = #{name})")
+    User getUserByID(@Param("id") int id, @Param("name") String name); // 基本类型需要使用Param,引用类型不需要
+}
+```
+
+## Lombok
+第三方插件,通过注解提供类的有参构造和无参构造，getter,setter,hashcode,toString等方法
+
+idea安装插件，maven导入即可使用
+不推荐使用
+
+## 复杂查询
+主要是resultMap,多对一查询外键时使用association, 一对多查询时使用collection
+
+查询多个表时有两种方式：
+- 使用结果嵌套处理，使用sql语句进行join操作，把结果集放入到resultMap中进行映射。
+
+    ```xml
+    <!-- 多个学生对应一个老师，这里查询出学生对应的老师 -->
+    <select id="getStudent2" resultMap="StudentTeacher2">
+        select s.id, s.name, t.name tname, t.id tid
+        from mybatis.student s, mybatis.teacher t
+        where s.tid = t.id  
+        <!-- 在这里使用sql查询出所有信息，对结果进行嵌套 -->
+    </select>
+    <resultMap id="StudentTeacher2" type="Student">
+        <result property="id" column="id"/>
+        <result property="name" column="name" />
+        <association property="teacher" javaType="Teacher"> 
+        <!-- javaType这里是查询出来的类型，一条查询结果对应一个老师 -->
+            <result property="name" column="tname" />
+            <result property="id" column="tid"/>
+        </association>
+    </resultMap>
+    ```
+- 按照查询嵌套处理，分成多次查询
+
+    ```xml
+    <select id="getStudent" resultMap="StudentTeacher">
+    <!-- 第一次查询，查出学生信息 -->
+        select * from mybatis.student
+    </select>
+    <resultMap id="StudentTeacher" type="Student">
+        <result property="id" column="id"/>
+        <result property="name" column="name"/>
+
+        <!-- 学生有老师的字段，应该再次查询出老师的信息 -->
+        <association property="teacher" column="tid" javaType="Teacher" select="getTeacher" /> 
+    </resultMap>
+    <select id="getTeacher" resultType="Teacher">
+    <!-- 第二次查询，查出老师的信息 -->
+        select * from mybatis.teacher where id = #{id}
+    </select>
+    ```
+    这种查询会有n+1的问题，需要发送多次请求
+
+javaType 用来指定实体类中属性的类型
+ofType 指定映射到List或者pojo泛型的约束类型
+
+## 动态sql
+拼接sql
+```xml
+<select id="queryBlogIf" parameterType="map" resultType="blog">
+    select * from mybatis.blog where 1=1
+    <if test="title != null">
+        and title = #{title}
+    </if>
+    <if test="author != null">
+        and author = #{author}
+    </if>
+</select>
+```
+1. where标签，有符合的自动添加where关键字，包含其他标签
+2. choose when otherwises 只会选择其中一个条件，像switch-case,有顺序匹配
+3. update 使用set 可以自动去掉逗号
+4. trim
+5. sql片段，可以抽取出相同的sql使用sql标签包含，使用的地方使用`<include refid="sql_id"></include>`
+6. foreach  in查询的时候使用
+
+## 缓存
+1. 一级缓存，默认开启，无法关闭，只在一次sqlSession中有效，在拿到连接到关闭连接内可以使用，以下几种情况会失效
+    - insert、update、delete会清空缓存
+    - 手动调用clearCache()
+    - 不同的Mapper.xml，无法使用缓存
+
+2. 二级缓存
+基于namespace级别的缓存，一个明明空间对应一个二级缓存，也就是不同的mapper有各自的缓存.
+不同的sqlsession之间，只有关闭了其中一个，他的一个缓存就关闭了，把结果放入了二级缓存，另一个session就可以使用第一个结果
+**步骤**
+   1. 需要在setting中开启全局缓存 `<setting name="cacheEnabled" value="true" />`
+   2. mapper.xml中使用缓存，
+     - 在Mapper.xml中添加 cache标签
+
+        ```xml
+        <cache eviction="FIFO" flushInterval="60" size="0" readOnly="true"/>
+        ```
+     - 可以对某个selce查询时 添加参数选择是否使用缓存
+
+**小结** 所有的数据都会存放在一级缓存，只有当会话提交或者关闭了，才会提交到二级缓存
