--- a/后端/java/spring/记录.md
+++ b/后端/java/spring/记录.md
@@ -6,6 +6,89 @@
 - Spring Cloud
   - SpringCloud基于SpringBoot实现
 
-Spring是一个完整的框架，包含SpringMVC.
+Spring是一个轻量级的控制反转（ioc）和面向切面（AOP）的容器（框架）。
 
 ## IOC
+Inversion of Control 控制反转。是一种设计思想，DI（依赖注入）是实现IOC的一种方式。ioc 获得依赖对象的方式反转了。
+## Spring配置
+1. beans 容器
+2. bean 单个实例对象
+   1. id 名称
+   2. class 类型的全限定名
+   3. name 别名
+3. property 是bean里面的字段
+   1. name 字段名
+   2. value 字段值
+   3. ref 字段引用
+
+4. constructor-arg 构造器里的参数
+5. import 将多个配置文件，导入合并为一个
+6. 命名空间
+  - p命名空间 property, 添加依赖，使用`p:`添加属性
+  ```xml
+  <beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xmlns:p="http://www.springframework.org/schema/p"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans
+        http://www.springframework.org/schema/beans/spring-beans.xsd">
+   <bean id="user" class="com.chen.pojo.User" p:name="李宗盛" p:age="50"/>
+  </beans>
+  ```
+  - c命名空间 constructor-arg， 类定义必须要有有参构造函数
+  ```xml
+  <beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xmlns:c="http://www.springframework.org/schema/c"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans
+        http://www.springframework.org/schema/beans/spring-beans.xsd">
+   <bean id="user2" class="com.chen.pojo.User" c:age="50" c:name="李宗盛"/>
+  </beans>
+  ```
+
+## DI 依赖注入
+1. 构造器注入
+2. set方式注入
+
+    依赖： bean对象的创建依赖于容器
+    注入：bean对象中的所有属性，由容器注入
+3. 拓展方式
+
+  可以使用p命名空间和c命名空间，需要先导入xml约束
+  ```xml
+  xmlns:p="http://www.springframework.org/schema/p"
+  xmlns:c="http://www.springframework.org/schema/c"
+  ```
+**bean作用域**：
+1. scope, 设置每个对象的模式
+    1. 单例 singleton 所有通过getBean获取到同一个对象 默认模式
+    2. 原型模式 prototype 每次都获取全新对象
+    3. request,session,application 这几个是web开发过程中的作用域
+
+## bean的自动装配
+AutoWired
+Spring在上下文中自动寻找，并自动给bean装配属性
+有三种装配的方式：
+  1. xml中显示装配
+  2. java中显示装配
+  3. 隐式的装配
+      - byName 自动在容器上下文中查找，查找自己对象set方法后面的值相同的beanid
+      - byType 自动在容器上下文中查找，找和自己对象属性类型相同的bean
+隐式的装配有两个操作：
+  - 组件扫描component scanning: spring会自动发现应用上下文创建的bean
+  - 自动装配autowiring spring自动满足bean之间的依赖，也就是ioc/di
+
+使用注解自动装配：
+  1. 配置文件中引入context文件头
+    ```xml
+    xmlns:context="http://www.springframework.org/schema/context"
+    http://www.springframework.org/schema/context
+    http://www.springframework.org/schema/context/spring-context.xsd
+    ```
+  2. 开启属性注解支持
+    ```xml
+    <context:annotation-config/>
+    ```
+  3. 使用`@Autowired`， autowired是根据ByType进行查找的。可以搭配`@Qualifier(value=beanid)`使用Byname的方式自动装配
+  4. 类似于autowired注解，还可以使用Resource,如果指定了value值，则优先使用byName进行装配。其次使用默认的byName,都不成就使用byType.
+  5. autowired和resource都可以定义在字段上或者写在setter上面
+  6. `@Autowired(required=false)`表示可以为空
