--- a/后端/java/spring/记录.md
+++ b/后端/java/spring/记录.md
@@ -92,3 +92,70 @@ Spring在上下文中自动寻找，并自动给bean装配属性
   4. 类似于autowired注解，还可以使用Resource,如果指定了value值，则优先使用byName进行装配。其次使用默认的byName,都不成就使用byType.
   5. autowired和resource都可以定义在字段上或者写在setter上面
   6. `@Autowired(required=false)`表示可以为空
+
+## AOP
+代理模式：静态代理、动态代理
+  - 静态代理， 使用代理类去代理实体类，能增加一些功能，但核心还是实体类，例如，租房子，房东是实体类，中介是代理类，中介代理房东
+  - 动态代理， 动态生成代理类，使用jdk的InvocationHandler和proxy来实现
+
+  ```java
+  public class ProxyInvocationHandler implements InvocationHandler {
+   private Object target;
+
+   public void setTarget(Object target) {
+       this.target = target;
+    }
+
+   //生成代理类
+   public Object getProxy(){
+       return Proxy.newProxyInstance(this.getClass().getClassLoader(),
+               target.getClass().getInterfaces(),this);
+    }
+
+   // proxy : 代理类
+   // method : 代理类的调用处理程序的方法对象.
+   public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+       log(method.getName());
+       Object result = method.invoke(target, args);
+       return result;
+    }
+
+   public void log(String methodName){
+       System.out.println("执行了"+methodName+"方法");
+    }
+  }
+
+  public class Test {
+    public static void main(String[] args) {
+        //真实对象
+        UserServiceImpl userService = new UserServiceImpl();
+        //代理对象的调用处理程序
+        ProxyInvocationHandler pih = new ProxyInvocationHandler();
+        pih.setTarget(userService); //设置要代理的对象
+        UserService proxy = (UserService)pih.getProxy(); //动态生成代理类！
+        proxy.delete();
+    }
+  }
+
+  ```
+
+AOP Aspect Oriented Programming 面向切面编程，通过预编译和运行期动态代理实现程序功能的同一维护的一种技术。
+设计到的名词定义：
+   - 横切关注点。 跨越应用程序多个模块的方法或功能。与业务逻辑无关的，但是需要关注的部分，如日志、安全、缓存、事务
+   - 切面 Aspect 横切关注点，被模块化的特殊对象。即一个类
+   - 通知 Advice 切面必须要完成的工作。即类中的一个方法
+   - 目标 target 被通知的对象
+   - 代理 proxy 向目标对象应用通知之后创建的对象
+   - 切入点 PointCut 切面通知，执行的地点的定义
+   - 连接点 joinpoint 与切入点匹配的执行点。
+
+## mybatis-spring
+
+整合mybatis到spring中
+```xml
+<dependency>
+   <groupId>org.mybatis</groupId>
+   <artifactId>mybatis-spring</artifactId>
+   <version>2.0.2</version>
+</dependency>
+```
