--- a/后端/java/spring/记录.md
+++ b/后端/java/spring/记录.md
@@ -159,3 +159,139 @@ AOP Aspect Oriented Programming 面向切面编程，通过预编译和运行期
    <version>2.0.2</version>
 </dependency>
 ```
+1. 第一种方式 
+在beans.xml里配置mybatis数据源
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- 1. 在beans里引入beans依赖 -->
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans
+       http://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <!-- 2. 配置数据源， 可以替换为其他 -->
+    <bean id="dataSource" class="org.springframework.jdbc.datasource.DriverManagerDataSource">
+        <property name="driverClassName" value="com.mysql.jdbc.Driver"/>
+        <property name="url" value="jdbc:mysql://localhost:3306/mybatis?useUnicode=true&amp;characterEncoding=utf8&amp;useSSL=false"/>
+        <property name="username" value="root"/>
+        <property name="password" value="123456"/>
+    </bean>
+    <!-- 3. 配置mybatis，利用SqlSessionFactoryBean注入 -->
+    <bean id="sqlSessionFactory" class="org.mybatis.spring.SqlSessionFactoryBean">
+        <!-- 设置数据源 -->
+        <property name="dataSource" ref="dataSource"/>
+        <!-- 导入mybatis-config.xml配置文件 -->
+        <property name="configLocation" value="classpath:mybatis-config.xml"/>
+        <!-- 导入mapper.xml的sql配置文件 -->
+        <property name="mapperLocations" value="classpath:com/chen/dao/*.xml"/>
+    </bean>
+    <!-- 4. 利用SqlSessionTemplate注入SqlSessionTemplate，也就是生成sqlSession -->
+    <bean id="sqlSessionTemplate" class="org.mybatis.spring.SqlSessionTemplate">
+        <!-- 这里使用构造器的方式进行生成，参数为sqlSessionFactory -->
+        <constructor-arg index="0" ref="sqlSessionFactory"/>
+    </bean>
+    <!-- 5. 将sqlSession注入到dao文件的实现类里，因为这里不能像以前那样从工具类获取到sqlSession，但是可以通过注入的方式，dao接口类，定义其实现类利用sqlSessionTemplate实现方法  -->
+    <bean id="userDao" class="com.chen.dao.UserDaoImpl">
+        <property name="sqlSessionTemplate" ref="sqlSessionTemplate"/>
+    </bean>
+</beans>
+```
+```java
+// Dao实现类
+public class UserDaoImpl implements UserMapper {
+    // 注入的sqlSessionTemplate，名称与上面的property.name相同
+    private SqlSessionTemplate sqlSessionTemplate;
+    // 通过set方法注入
+    public void setSqlSessionTemplate(SqlSessionTemplate sqlSessionTemplate) {
+        this.sqlSessionTemplate = sqlSessionTemplate;
+    }
+
+    // 利用获得的sqlSession来实现具体的查询
+    @Override
+    public List<User> selectUser() {
+        UserMapper mapper = sqlSessionTemplate.getMapper(UserMapper.class);
+        return mapper.selectUser();
+    }
+}
+
+```
+```java
+// 测试类
+public class myTest {
+    @Test
+    public void test01(){
+        // 1. 获取beans的上下文
+        ApplicationContext context = new ClassPathXmlApplicationContext("beans.xml");
+        // 2. 获取userMapperImpl的实例，并使用其接口接收，因为这样后面修改实现类的话只需要修改xml，不用修改源代码
+        UserMapper userMapper = context.getBean("userDao", UserMapper.class);
+        // 3. 进行查询
+        List<User> users = userMapper.selectUser();
+        for (User user : users) {
+            System.out.println(user);
+        }
+    }
+}
+```
+2. 第二种方式
+大体与上面类似，不同点是第一种是通过注入SqlSessionTemplate来获取到sqlSession进行查询，第二种是通过继承SqlSessionDaoSupport，直接使用getSession()来获取到sqlSession,第二种需要注入sqlSessionFactory，其实就是SqlSessionDaoSupport里实现了注入的操作，我们只需要获取即可，简化部分操作。
+
+```xml
+<!-- beans部分代码 -->
+    <bean id="userDao2" class="com.chen.dao.UserDaoImpl2">
+        <property name="sqlSessionFactory" ref="sqlSessionFactory"/>
+    </bean>
+```
+```java
+public class UserDaoImpl2 extends SqlSessionDaoSupport implements UserMapper {
+    @Override
+    public List<User> selectUser() {
+        return getSqlSession().getMapper(UserMapper.class).selectUser();
+    }
+}
+```
+```java
+// 测试类
+@Test
+public void test02(){
+    ApplicationContext context = new ClassPathXmlApplicationContext("beans.xml");
+    UserMapper userDao2 = context.getBean("userDao2", UserMapper.class);
+    List<User> users = userDao2.selectUser();
+    for (User user : users) {
+        System.out.println(user);
+    }
+}
+```
+
+## 事务操作
+这里使用aop面向切面的注入，只需要在beans.xml文件中添加事务管理即可
+```xml
+<!-- 1. 在头文件中引入对aop,tx的依赖 -->
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xmlns:tx="http://www.springframework.org/schema/tx" xmlns:aop="http://www.springframework.org/schema/aop"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans
+       http://www.springframework.org/schema/beans/spring-beans.xsd
+       http://www.springframework.org/schema/tx
+       http://www.springframework.org/schema/tx/spring-tx.xsd http://www.springframework.org/schema/aop https://www.springframework.org/schema/aop/spring-aop.xsd">
+    <!-- 2. 注入一个事务管理器实例，参数为数据源 -->
+    <bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+        <property name="dataSource" ref="dataSource"/>
+    </bean>
+    <!-- 3. 配置事务通知 -->
+    <tx:advice id="txAdvice" transaction-manager="transactionManager">
+        <tx:attributes>
+            <tx:method name="add" propagation="REQUIRED"/>
+            <tx:method name="delete" propagation="REQUIRED"/>
+            <tx:method name="update" propagation="REQUIRED"/>
+            <tx:method name="search*" propagation="REQUIRED"/>
+            <tx:method name="get" read-only="true"/>
+            <tx:method name="*" propagation="REQUIRED"/>
+        </tx:attributes>
+    </tx:advice>
+    <!-- 4. 配置切入点，以及如何通知 -->
+    <aop:config>
+        <aop:pointcut id="txPointcut" expression="execution(* com.chen.dao.*.*(..))"/>
+        <aop:advisor advice-ref="txAdvice" pointcut-ref="txPointcut"/>
+    </aop:config>
+</beans>
+```
