--- a/后端/java/spring/文档.md
+++ b/后端/java/spring/文档.md
@@ -1,4 +1,114 @@
-[中文文档](https://www.docs4dev.com/docs/zh/spring-framework/5.1.3.RELEASE/reference/core.html#beans)
+[文档](https://docs.spring.io/spring-framework/docs/current/spring-framework-reference/core.html)
 
 # Core
 ## Ioc容器
+1. 介绍spring Ioc容器和beans
+Ioc控制反转，也被称为依赖注入DI。表达的是一个过程，一个对象A依赖另一个对象B，将B作为A的一个属性，通过构造方法、工厂方法、set方法来定义。容器在创建bean时注入这些依赖项（spring框架通过构造器或者set赋值来注入）。依赖的过程应该是在A中定义B，然后使用B，现在是只声明B，通过容器来控制，与依赖过程相反，所以叫控制反转。
+Ioc主要使用了`org.springframework.beans`和`org.springframework.context`
+bean: 在程序中有SpringIoc容器来管理的对象。用来注入或者依赖其他对象，也可以使用获取。
+2. 容器概念
+`ApplicationContext`接口代表了Spring Ioc容器，并负责实例化、配置和组装bean。容器通过读取配置数据来进行相关的实例化，配置可以使用xml、java注解或者java代码表示。ApplicationContext的实现类有几种：ClassPathXmlApplicationContext或者FileSystemXmlApplicationContext，通过读取xml文件来加载配置。
+   1. 配置： 可以使用java注解或者xml来进行配置
+    ```xml
+    <?xml version="1.0" encoding="UTF-8"?>
+    <!-- xmlns表示命名空间 xsi表示文件结构， xsi:schemaLocation指定的xsd则表示具体的文件格式定义文件-->
+    <beans xmlns="http://www.springframework.org/schema/beans"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://www.springframework.org/schema/beans
+            http://www.springframework.org/schema/beans/spring-beans.xsd">
+        <!-- 使用bean标签定义bean，id表示实例名，表示写作，class是类型的全限定类名 -->
+        <bean id="..." class="..."> 
+            <!-- collaborators and configuration for this bean go here -->
+        </bean>
+
+        <!-- more bean definitions go here -->
+
+    </beans>
+    ```
+   2. 实例化
+    `ApplicationContext context = new ClassPathXmlApplicationContext("serivices.xml", "daos.xml");`
+   3. 使用容器
+    ```java
+    // 创建和配置beans
+    ApplicationContext context = new ClassPathXmlApplicationContext("applicationContext.xml");
+    // 获取实例对象
+    PetStoreService service = context.getBean("petStore", PetStoreService.class);
+    // 使用实例
+    List<String> userList = service.getUsernameList();
+    ```
+3. Bean总览
+   - 命名Bean 使用id或name进行命名，引用其他bean则使用ref进行引用。bean的命名使用首字母小写的驼峰式命名。
+   - 别名 alias `<alias name="fromName" alias="toName"/>`
+   - class 指定类，  可以使用构造器进行constructor-arg添加构造器参数，或者property使用set函数注入,或者使用工厂函数进行注入， factory-method
+4. 依赖
+   1. 依赖注入 类A依赖类B，但是在A中定义B是通过构造函数参数，工厂方法的参数或者setter的参数来赋值的，这种通过类自己控制依赖关系的实例化过程就叫做依赖注入。主要就是两种方式：构造函数和setter
+    第一种：
+    ```java
+    package x.y;
+
+    public class ThingOne {
+
+        public ThingOne(ThingTwo thingTwo, ThingThree thingThree) {
+            // ...
+        }
+    }
+    ```
+    ```xml
+    <beans>
+        <bean id="thingOne" class="x.y.ThingOne">
+            <constructor-arg ref="thingTwo"/>
+            <constructor-arg ref="thingThree"/>
+        </bean>
+
+        <bean id="thingTwo" class="x.y.ThingTwo"/>
+
+        <bean id="thingThree" class="x.y.ThingThree"/>
+    </beans>
+    ```
+    第二种：
+    ```java
+    package examples;
+
+    public class ExampleBean {
+
+        // Number of years to calculate the Ultimate Answer
+        private int years;
+
+        // The Answer to Life, the Universe, and Everything
+        private String ultimateAnswer;
+
+        public ExampleBean(int years, String ultimateAnswer) {
+            this.years = years;
+            this.ultimateAnswer = ultimateAnswer;
+        }
+    }
+    ```
+    ```xml
+    <bean id="exampleBean" class="examples.ExampleBean">
+    <!-- 使用参数类型赋值 -->
+        <constructor-arg type="int" value="7500000"/>
+        <constructor-arg type="java.lang.String" value="42"/>
+    </bean>
+    <!-- 按照顺序赋值 -->
+    <bean id="exampleBean" class="examples.ExampleBean">
+        <constructor-arg index="0" value="7500000"/>
+        <constructor-arg index="1" value="42"/>
+    </bean>
+    <!-- 使用参数名称赋值 -->
+    <bean id="exampleBean" class="examples.ExampleBean">
+        <constructor-arg name="years" value="7500000"/>
+        <constructor-arg name="ultimateAnswer" value="42"/>
+    </bean>
+    ```
+
+p命名空间和c命名空间，p命名空间可以更加快速的定义字段值。c命名空间可以简化constructor-arg构造函数的参数
+5. bean范围scope
+
+    - singleton 默认 是单例模式，每次获取的都是同一个实例
+    - prototype 每次获取新的对象
+    - request 生命周期是一个请求
+    - session 生命周期是一个session
+    - application ServletContext 
+    - websocket 生命周期是webSocket
+
+6. 自定义bean的性质
