--- a/后端/java/springboot/记录.md
+++ b/后端/java/springboot/记录.md
@@ -158,3 +158,24 @@ yaml文件可以放在下面几个位置，都会生效，但是优先级不同
 优先级3：资源路径下的config文件夹配置文件
 优先级4：资源路径下配置文件
 ```
+
+## 自动装配
+```yaml
+SpringBootApplication:
+  EnableAutoConfiguration:
+    @Import(AutoConfigurationImportSelector.class):
+      # 这里使用Import注解将类注入到spring容器中，只要AutoConfigurationImportSelector实现ImportSelector或者ImportBeanDefinitionRegistrar即可
+      selectImports:
+        getAutoConfigurationEntry: # 获取自动配置
+          getCandidateConfigurations: # 根据条件来加载自动配置的类
+            loadFactoryNames:
+              loadSpringFactories:
+                classLoader.getResources("META-INF/spring.factories")
+                  # 从这个目录下来获取所有的自动配置类
+AutoConfiguration: #自动配置类，每个可以自动配置的包都要实现，
+  @ConditionalOnXXX: # 当实现某些条件时候进行加载
+    @EnableConfigurationProperties(MultipartProperties.class):
+    # 从XXXProperties读取属性值
+    @ConfigurationProperties(prefix = "spring.servlet.multipart", ignoreUnknownFields = false): #前缀为spring.servlet.multipart，在yaml文件中可以通过这个前缀修改其中的字段属性
+```
+这个过程会在启动时把需要的配置进行自动配置
