--- a/后端/java/springboot/记录.md
+++ b/后端/java/springboot/记录.md
@@ -179,3 +179,11 @@ AutoConfiguration: #自动配置类，每个可以自动配置的包都要实现
     @ConfigurationProperties(prefix = "spring.servlet.multipart", ignoreUnknownFields = false): #前缀为spring.servlet.multipart，在yaml文件中可以通过这个前缀修改其中的字段属性
 ```
 这个过程会在启动时把需要的配置进行自动配置
+
+```java
+public static List<String> loadFactoryNames(Class<?> factoryType, @Nullable ClassLoader classLoader) {
+    String factoryTypeName = factoryType.getName();
+    return (List)loadSpringFactories(classLoader).getOrDefault(factoryTypeName, Collections.emptyList());
+}
+// 这里的factoryTypeName是 EnableAutoConfiguration.class; 也就是使用了EnableAutoConfiguration注解的类
+```
