--- a/操作系统/常见问题.md
+++ b/操作系统/常见问题.md
@@ -113,6 +113,8 @@
     共同点：
     1. 分页机制和分段机制都是为了提供内存利用率，较少内存碎片
     2. 页和段都是离散存储的，所以这两者都是离散分配内存的方式。但是每个页和段的内存时连续的。
+
+
     区别：
     1. 页的大小是固定的，由操作系统决定，而段的大小不固定，取决于当前运行的程序
     2. 分页仅仅为了满足操作系统内存管理的需求，而段式逻辑信息的单位，在程序中可以体现为代码段，数据段可以更好的满足用户的需求
@@ -128,17 +130,19 @@
     ![avator](images/cpu寻址.jpg)
 
     CPU： central process unit
+
     MMU: memory management unit
+
     tlb: translation lookaside buffer 页表缓冲
 
-    2. 为什么需要虚拟地址空间？
+    1. 为什么需要虚拟地址空间？
     
     如果没有虚拟地址空间，程序可以直接访问和操作物理内存，可能导致：
      * 用户程序可以访问任意内存，寻址内存中的每个字节，容易破坏操作系统，造成系统崩溃
      * 很难同时运行多个程序，多个程序对同一物理地址进行操作，导致程序崩溃
     使用虚拟地址的优势：
-       1. 程序可以使用一系列相邻的虚拟地址来访问物理内存中不相邻的大内存婚宠去。
-       2. 程序可以使用一些列虚拟地址来访问大于可用物理地址内存的内存缓冲区，。当物理内存的供应量变小时，内存管理器会将物理内存也保存到磁盘文件。数据或者代码页会根据需要在物理内存和磁盘之间移动。
+       1. 程序可以使用一系列相邻的虚拟地址来访问物理内存中不相邻的大内存缓冲区。
+       2. 程序可以使用一系列虚拟地址来访问大于可用物理地址内存的内存缓冲区。当物理内存的供应量变小时，内存管理器会将物理内存也保存到磁盘文件。数据或者代码页会根据需要在物理内存和磁盘之间移动。
        3. 不同进程间使用的虚拟地址彼此隔离。一个进程的代码无法改变另一个进程中正在使用的物理地址。
 
 ### 虚拟内存
@@ -163,7 +167,7 @@
 
 3. 虚拟存储器
    
-   基于局部性原理，在程序装入时，可以将程序的一部分装入内存，而将其他部分留在外存，就可以启动程序运行。由于外存旺旺比内存大很多，所以我们运行的软件的内存大小实际上是可以比计算机系统实际的内存大的。在程序执行过程中，当所访问的信息不再内存时，由操作系统将所需的部分调入内存，然后继续执行程序。另一方面，操作系统将内存中暂时不使用的内存换到外存上，从而腾出空间存放将要调入内存的信息。这样，计算机好像为用户提供了一个比实际内存大很多的存储器---虚拟存储器。
+   基于局部性原理，在程序装入时，可以将程序的一部分装入内存，而将其他部分留在外存，就可以启动程序运行。由于外存往往比内存大很多，所以我们运行的软件的内存大小实际上是可以比计算机系统实际的内存大的。在程序执行过程中，当所访问的信息不再内存时，由操作系统将所需的部分调入内存，然后继续执行程序。另一方面，操作系统将内存中暂时不使用的内存换到外存上，从而腾出空间存放将要调入内存的信息。这样，计算机好像为用户提供了一个比实际内存大很多的存储器---虚拟存储器。
    实际上，我觉得虚拟内存同样是一种时间换空间的策略，利用CPU的计算时间，页的调入调出花费的事件，换来了一个虚拟的更大的空间来支持程序的原型。
 
 4. 虚拟内存的技术实现
