--- a/操作系统/常见问题.md
+++ b/操作系统/常见问题.md
@@ -77,7 +77,7 @@
 
     1. 块式管理： 很早的计算机操作系统的内存管理方式。将内存分为几个固定大小的块，每个块中只包含一个进程。如果程序运行需要内存的话，操作系统就会分配给它一块，如果程序运行只需要很小的内存空间，分配的这块内存中很大一部分被浪费了，这些每个块中没有被使用的内存，称为碎片。
     2. 页式管理： 把主存分为大小相等且固定的一页一页的形式，页较小，对比于块式管理的划分粒度更大，提高了内存利用率，减少了碎片，页式管理通过页表对应逻辑地址和物理地址。
-    3. 段式管理： 页式管理虽然提高了内存利用率，但是页式管理其中的页实际上并无任何实际意义。段式管理把主存分为一段一段的，每一段的空间又比一页的空间小很多。但是段的划分是有实际意义的，每个段定义了一组逻辑信息。例如，有主程序段MAIN，子程序段X，数据段D以及栈段S等，段式管理通过段表对应逻辑地址和物理地址。
+    3. 段式管理： 页式管理虽然提高了内存利用率，但是页式管理其中的页实际上并无任何实际意义。段式管理把主存分为一段一段的，段比页要大。但是段的划分是有实际意义的，每个段定义了一组逻辑信息。例如，有主程序段MAIN，子程序段X，数据段D以及栈段S等，段式管理通过段表对应逻辑地址和物理地址。
     4. 段页式管理机制：结合了段式管理和也是管理的优点，简单来说就是把主存分为若干段，每个段又分为若干页，也就是说段页式管理机制中段与段之间以及段的内部都是离散的。
 
 3. 页管理机制中有两个重要的概念： 快表和多级页表，这两个东西分别解决了页表管理中很重要的问题，请简单介绍下
