--- a/后端/python/面试问题总结.md
+++ b/后端/python/面试问题总结.md
@@ -147,3 +147,13 @@ fn()
 8. drf常见组件，permission_classes, autuentication_classes, filter ,自定义组件继承自对应的已定义的组件，并添加对应的选项。
 
 例如 自定义serializer,继承自ModelSerializer, 写下要序列化的字段。Meta字段定义model
+drf优点：
+  - 前后端分离
+  - 提高REST API效率
+
+序列化： 将模型对象转换为json字典的过程
+反序列化： 将客户端传递过来的数据转化为模型对象的过程。
+
+9. restful api：
+
+发送批量删除请求， `POST /XX/delete/` body里放入ID列表
