--- a/后端/python/面试问题总结.md
+++ b/后端/python/面试问题总结.md
@@ -157,3 +157,104 @@ drf优点：
 9. restful api：
 
 发送批量删除请求， `POST /XX/delete/` body里放入ID列表
+
+10. 可变对象与不可变对象
+
+不可变对象：int, str, 元组。声明定义时候会申请一块内存，并赋值，不能进行修改，对指针引用的修改，也就是对变量重新赋值，重新申请内存。
+可变对象：set,list,dict
+
+11. is 和 ==
+
+is 判断引用是否相同，也就是对应的id值相同。指针指向同一内存地址。
+== 比较两个对象的内容相同，默认调用`__eq__()`方法
+
+12. 垃圾回收
+
+默认的垃圾回收机制是使用引用计数，每个对象中使用一个变量来保存引用计数，当计数为0的时候可以清理。
+但是垃圾回收会有循环引用的问题。
+```python
+a = {} # 计数为1
+b = {} # 计数为1
+a["b"] = b # 计数为2
+b["a"] = a # 计数为2
+del a # 计数为1
+del b # 计数为1
+```
+del操作之后，计数为1则无法进行清理操作。这里需要使用标记清除算法，使用可达性分析来标记出需要清理的对象，之后进行删除。可达性分析是以栈变量，全局变量，寄存器为根，向下寻找引用，如果某些对象是不可达的，就是应该进行清理的。
+可以使用分代算法，利用空间换时间来加速垃圾清理的过程。分为新生代，中年代和老年代。
+
+13. 多重继承
+
+可以向接口一样使用，比如定义父类 Runnable, Flyable, 定义mixin类，来表示可以实现什么方法。通过普通继承表示是什么。
+如果继承的两个类中有相同的函数，则调用顺序是按照定义的顺序。
+
+
+14. django permission()
+
+```
+has_permission(self, request, view)
+has_object_permission(self, request, view, obj)
+```
+第一个表示对接口有权限，第二个表示对查询的结果有权限
+
+15. django中的F和Q
+
+F是用来比较同一个model的不同字段。
+```python
+Book.objects.filter(id__gt=F("price")) # 查询id值大于价格的书籍
+Book.objects.all().update(price=F("price")+30)
+```
+Q查询主要用作and,or,not
+```python
+# and
+Question.objects.filter(Q(question_text__contains="you"), Q(question_text_contains="what"))
+# or
+Question.objects.filter(Q(question_text__contains="you") | Q(question_text_contains="what"))
+# not
+Question.objects.filter(~Q(question_text__contains='you'))
+```
+16. 正则表达式
+    
+re.match(pattern, line, flag)
+表示从头开始匹配，返回的结果在group()中，使用group(1)进行读取
+
+re.search(pattern, line, flag)
+扫描整个字符串并返回第一个成功的匹配
+
+re.sub(pattern, repl, line, flag)
+将line中匹配成功的部分替换为repl
+
+re.compile(pattern, flag)
+用来编译正则表达式，生成一个结果供match,search使用
+
+re.findall(pattern, line)
+表示查找所有，返回列表
+
+re.finditer(pattern, line)与上面一样，不过返回一个迭代器
+
+re.split()表示可以将字符串分割返回列表
+
+标志位flag:
+  1. re.I 大小写不敏感
+  2. re.M 多行匹配
+  3. re.S .可以匹配符号
+
+正则表达式模式：
+  1. `^` 开头
+  2. `$` 结尾
+  3. `.` 匹配任意字符，除了换行符.可以使用re.DOTALL,表示匹配包括换行符在内的任意字符
+  4. `[...]` 表示一组字符， 如`[abc]` 可以匹配a,b,c任意一个
+  5. `[^...]` 表示不在列表中的字符
+  6. `*` 0个或者多个
+  7. `+` 1个或者多个
+  8. `?` 匹配前面0个或者1个前面正则表达式定义的片段，非贪婪模式
+  9. `{n}` 具体有几个前面重复的
+  10. `{n,}` 至少n个。 n,0 和 * 等价， n,1和+等价
+  11. `{n, m}` n到m次
+  12. `a|b` a或者b
+  13. `()` 对匹配的内容分组，并记住匹配的文本
+  14. `\w` 匹配字母数字和下划线
+  15. `\W` 非字母数字和下划线
+  16. `\s` 空白字符
+  17. `\S` 非空字符
+  18. 
