--- a/后端/python/面试问题总结.md
+++ b/后端/python/面试问题总结.md
@@ -257,4 +257,58 @@ re.split()表示可以将字符串分割返回列表
   15. `\W` 非字母数字和下划线
   16. `\s` 空白字符
   17. `\S` 非空字符
-  18. 
+
+17. java使用数组实现队列
+
+保持两个指针，一个指向头，一个指向尾部，如果大于数组长度就就从头部开始，如果小于0就从尾部开始。
+
+18. csrf， cors， XSS
+csrf: 跨站请求伪造，攻击者盗用了身份，以用户的名义发送请求。
+步骤： 登录了网站A，本地生成了cookie.登录网站B,网站B要求访问A，发送一个请求。然后浏览器就会带着B的请求访问A。
+解决：
+   1. 开启中间件csrfviewMidddleware
+   2. 然后在页面上添加 `{% csrf_token %}`， 这个值会被保存到cookie
+   3. 这样下次请求就会带着这个随机串来验证是用户自己访问的。
+   4. 如果使用ajax，需要从cookie中获取到这个值，然后添加到header中 `{'X-CSRFtoken': csrftoken}`
+   5. 但是接口不需要添加这个验证，需要在视图函数上添加`@csrf_exempt`来关闭。 `@csrf_protect`表示启用。
+    
+    原理：
+    在process_request的的时候，先从请求中获取到csrftoken。
+    进行process_view,检查请求方式是否是post,如果是post，且视图没有关闭csrf就报错。如果是其他的请求，如get,head,options就返回，设置需要添加csrftoken
+    在process_response,如果需要添加就添加csrftoken.
+
+cors: 跨域
+    浏览器为了安全因素，增加了同源策略。
+    浏览器将cors分为两种请求：简单请求和非简单请求。
+
+  **简单请求**
+    方法有head，get,post. http头部只能有Accept,Accept-Language.Content-Language
+    客户端直接发送请求，浏览器会在头中加入Orign字段，表示来自哪个源，如果服务器许可，会在返回信息中包含Access-Control-Allow-Origin中添加源。默认cors不带cookie，可以在服务器端指定Access-Control-Allow-Credentials，需要在ajax中打开withCredentials属性。
+
+  **非简单请求**     
+    put,delete，在发送请求之前会发送一个options查询。询问网页的域名是否在服务器的许可名单里。通过许可后也会在respones中带有Access-Control-Allow-Origin
+
+    django中使用。 安装app. corsheaders. 安装中间件 corsheaders.middleware.CorsMiddleware.设置白名单就即可。可以添加CORS_ALLOW_CREDENTIALS=True 允许带cookie
+
+XSS: 跨站脚本攻击。html注入，在输入数据的地方输入可执行语句。django默认转成字符串了。
+
+19. 动态性语言
+
+为什么Python 是动态语言，声明一个变量时不需要声明类型。解释性语言，不要编译。
+
+20.    分布式锁
+
+
+21.    get delete有没有方法体
+
+其实都可以带body的，但是发送ajax请求，无法携带。
+
+1.  快排复杂度
+    
+    nlgn
+
+2.  递归的缺点
+
+调用栈可能会溢出
+很多计算时重复的
+消耗内存
