--- a/数据库/mysql/基础.md
+++ b/数据库/mysql/基础.md
@@ -35,3 +35,20 @@
 脏读|一个事务读取到了另一个事务中尚未提交的数据
 不可重复读|一个事务中两次读取的数据内容不一致，要求的是一个事务中多次读取数据是一致的，这是事务Update时引发的问题
 幻读|一个事务中两次读取的数据的数量不一致，要求在一个事务多次读取的数据的数量是一致 的，这是 insert 或 delete 时引发的问题
+
+### cte
+```sql
+WITH cte (groupId, spId) AS (
+    SELECT groupId, spId FROM Group WHERE groupId = %s
+    UNION ALL
+    SELECT c.groupId, c.spId from Group AS c
+    INNER JOIN cte AS p ON c.parentId = p.groupId
+)
+SELECT userId, groupName
+FROM (
+    SELECT A.userId, B.name as groupName
+    FROM UserGroupMap AS A
+    INNER JOIN Group AS B ON A.groupId = B.groupId 
+    WHERE A.groupId IN (SELECT groupId FROM cte)
+) AS Z;
+```
